# star-compass

./: .env.example  .gitignore  docker-compose.dev.yml  docker-compose.prod.yml
backend/: Dockerfile.dev  Dockerfile.prod  pyproject.toml
backend/app/: routes.py
backend/app/models/: interfaces.py  star_model.py
backend/app/schemas/: requst_responce_schema.py  star_constellation_schema.py
backend/app/services/: interfaces.py  sky_calculator_service.py
backend/tests/: test_sky_calculator.py
frontend/: Dockerfile.dev  Dockerfile.prod  nginx.conf
