[project]
name = "star-compass-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Rostyslav",email = "styslav.v@gmail.com"}
]
license = "MIT"
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "gunicorn (>=25.3.0,<26.0.0)",
    "astropy (>=7.2.0,<8.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "pydantic (>=2.13.3,<3.0.0)",
    "uvicorn-worker (>=0.4.0,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "ruff (>=0.15.12,<0.16.0)",
    "mypy (>=1.20.2,<2.0.0)"
]
